After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756070 - id3tag: fix sample memory leak
id3tag: fix sample memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-05 02:21 UTC by Vineeth
Modified: 2015-10-07 18:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix sample memory leak (1.33 KB, patch)
2015-10-05 02:21 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-10-05 02:21:00 UTC
When getting sample from taglist, the memory is not being freed resulting in memory leak.
Comment 1 Vineeth 2015-10-05 02:21:44 UTC
Created attachment 312657 [details] [review]
fix sample memory leak
Comment 2 Sebastian Dröge (slomo) 2015-10-05 11:07:41 UTC
commit 43ce0c3142bd93eaf9983cdaadb68a3eb611dca6
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Mon Oct 5 11:21:07 2015 +0900

    id3tag: fix sample memory leak
    
    When getting sample from taglist, the memory is not being freed resulting in memory leak.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756070