id3tag: fix sample memory leak

When getting sample from taglist, the memory is not being freed resulting in memory leak.

https://bugzilla.gnome.org/show_bug.cgi?id=756070